* v1.2版本增加了指定wav_name功能

--- a/html/templates/index.html
+++ b/html/templates/index.html
@@ -29,6 +29,9 @@
             <div class="divider"></div>
         </div>
         <div class="col s6">
+            <div class="left" style="padding-top: 10px;">
+                <a id="wav_url"></a>
+            </div>
         </div>
         <div class="col s6 ">
             <div class="right" style="padding-top: 10px;">
